src/objects/Extracurricular_Activity__c.object
<CustomObject>
    <description>Represents an extracurricular activity history for a person</description>
    <fields>
        <fullName>Activity__c</fullName>
        <description>The activity for this extracurricular activity history</description>
        <inlineHelpText>The activity for this extracurricular activity history</inlineHelpText>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Extracurricular_Activities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The person who did this extracurricular activity</description>
        <inlineHelpText>The person who did this extracurricular activity</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Extracurricular Activities</relationshipLabel>
        <relationshipName>Extracurricular_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Honors/Awards/Positions for this activity</description>
        <inlineHelpText>Honors/Awards/Positions for this activity</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Activity_Name__c</fullName>
        <label>Other Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies the previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>Related Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Years_Participated__c</fullName>
        <description>The school years in which the person participated in this activity</description>
        <inlineHelpText>The school years in which the person participated in this activity</inlineHelpText>
        <label>School Years Participated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Extracurricular Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Contact__c</columns>
        <columns>School_Years_Participated__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Extracurricular Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extracurricular Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>